fix response when updating job params
