# uws/generated/servers/python/fastapi/src/uws_server/models/post_update_job303_response.py
@@ -1,0 +1,149 @@
+# coding: utf-8
+
+"""
+    Universal Worker Service (UWS)
+
+    The Universal Worker Service (UWS) pattern defines how to manage asynchronous execution of jobs on a service.
+
+    The version of the OpenAPI document: 1.2
+    Contact: grid@ivoa.net
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+from inspect import getfullargspec
+import json
+import pprint
+import re  # noqa: F401
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr, ValidationError, field_validator
+from typing import Any, List, Optional
+from uws_server.models.job_summary import JobSummary
+from uws_server.models.jobs import Jobs
+from typing import Union, Any, List, TYPE_CHECKING, Optional, Dict
+from typing_extensions import Literal
+from pydantic import StrictStr, Field
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+POSTUPDATEJOB303RESPONSE_ONE_OF_SCHEMAS = ["JobSummary", "Jobs"]
+
+class PostUpdateJob303Response(BaseModel):
+    """
+    PostUpdateJob303Response
+    """
+    # data type: Jobs
+    oneof_schema_1_validator: Optional[Jobs] = None
+    # data type: JobSummary
+    oneof_schema_2_validator: Optional[JobSummary] = None
+    actual_instance: Optional[Union[JobSummary, Jobs]] = None
+    one_of_schemas: List[str] = Literal["JobSummary", "Jobs"]
+
+    model_config = {
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def __init__(self, *args, **kwargs) -> None:
+        if args:
+            if len(args) > 1:
+                raise ValueError("If a position argument is used, only 1 is allowed to set `actual_instance`")
+            if kwargs:
+                raise ValueError("If a position argument is used, keyword arguments cannot be used.")
+            super().__init__(actual_instance=args[0])
+        else:
+            super().__init__(**kwargs)
+
+    @field_validator('actual_instance')
+    def actual_instance_must_validate_oneof(cls, v):
+        instance = PostUpdateJob303Response.model_construct()
+        error_messages = []
+        match = 0
+        # validate data type: Jobs
+        if not isinstance(v, Jobs):
+            error_messages.append(f"Error! Input type `{type(v)}` is not `Jobs`")
+        else:
+            match += 1
+        # validate data type: JobSummary
+        if not isinstance(v, JobSummary):
+            error_messages.append(f"Error! Input type `{type(v)}` is not `JobSummary`")
+        else:
+            match += 1
+        if match > 1:
+            # more than 1 match
+            raise ValueError("Multiple matches found when setting `actual_instance` in PostUpdateJob303Response with oneOf schemas: JobSummary, Jobs. Details: " + ", ".join(error_messages))
+        elif match == 0:
+            # no match
+            raise ValueError("No match found when setting `actual_instance` in PostUpdateJob303Response with oneOf schemas: JobSummary, Jobs. Details: " + ", ".join(error_messages))
+        else:
+            return v
+
+    @classmethod
+    def from_dict(cls, obj: dict) -> Self:
+        return cls.from_json(json.dumps(obj))
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Returns the object represented by the json string"""
+        instance = cls.model_construct()
+        error_messages = []
+        match = 0
+
+        # deserialize data into Jobs
+        try:
+            instance.actual_instance = Jobs.from_json(json_str)
+            match += 1
+        except (ValidationError, ValueError) as e:
+            error_messages.append(str(e))
+        # deserialize data into JobSummary
+        try:
+            instance.actual_instance = JobSummary.from_json(json_str)
+            match += 1
+        except (ValidationError, ValueError) as e:
+            error_messages.append(str(e))
+
+        if match > 1:
+            # more than 1 match
+            raise ValueError("Multiple matches found when deserializing the JSON string into PostUpdateJob303Response with oneOf schemas: JobSummary, Jobs. Details: " + ", ".join(error_messages))
+        elif match == 0:
+            # no match
+            raise ValueError("No match found when deserializing the JSON string into PostUpdateJob303Response with oneOf schemas: JobSummary, Jobs. Details: " + ", ".join(error_messages))
+        else:
+            return instance
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the actual instance"""
+        if self.actual_instance is None:
+            return "null"
+
+        to_json = getattr(self.actual_instance, "to_json", None)
+        if callable(to_json):
+            return self.actual_instance.to_json()
+        else:
+            return json.dumps(self.actual_instance)
+
+    def to_dict(self) -> Dict:
+        """Returns the dict representation of the actual instance"""
+        if self.actual_instance is None:
+            return None
+
+        to_dict = getattr(self.actual_instance, "to_dict", None)
+        if callable(to_dict):
+            return self.actual_instance.to_dict()
+        else:
+            # primitive type
+            return self.actual_instance
+
+    def to_str(self) -> str:
+        """Returns the string representation of the actual instance"""
+        return pprint.pformat(self.model_dump())
+
+
